--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "universalify": "^0.1.2",
     "url-parse-lax": "^3.0.0",
     "wrappy": "^1.0.2",
+    "xmlhttprequest": "^1.8.0",
     "yallist": "^4.0.0",
     "yauzl": "^2.10.0"
   },
